# collection

./: .gitmodules  CMakeLists.txt  build-linux-clang-tidy.sh  build-linux-gcc.sh
cmake/: coverage.cmake  doxygen.cmake  gtest.cmake  utils.cmake
ext/: CMakeLists.txt
ext/unity/: CMakeLists.txt
ext/zcbor/: CMakeLists.txt
size_test/: Makefile  build_arm.sh  build_linux.sh  readme.txt  size_arm.txt  size_linux.txt  warnings.txt
src/: CMakeLists.txt  collection.c  collection.h
src/port/: collection_port_fs.h  collection_port_linked_list.h  collection_port_mem.h  collection_port_serializer.h
src/utils/: coll_utils.c  coll_utils.h
utest/: CMakeLists.txt  collection_test.c  runner.c
utest/mock/: coll_port_fs_mock.c  coll_port_fs_mock.h  coll_port_linked_list_mock.c  coll_port_mem_mock.c  coll_port_serializer_mock.c  coll_port_serializer_mock.h
utest/mock/serializer/: generate_files.sh  serializer_pet_decode.c  serializer_pet_decode.h  serializer_pet_encode.c  serializer_pet_encode.h  serializer_pet_types.h
utest/mock/slist/: CMakeLists.txt  list_gen.h  slist.h
utest/mock/utils/: test_utils.c  test_utils.h
