cmake_minimum_required(VERSION 3.14)
project(collection)
enable_language(C)
enable_language(CXX)
set(CMAKE_CXX_STANDARD 14)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake" ${CMAKE_MODULE_PATH})
find_package(Sanitizers)
include(cmake/coverage.cmake)
include(cmake/utils.cmake)

option(COLLECTION_CONFIG_RUNTIME_CHECKS_ENABLED "Runtime checks enabled." OFF)
if(COLLECTION_CONFIG_RUNTIME_CHECKS_ENABLED)
    add_compile_definitions(COLLECTION_CONFIG_RUNTIME_CHECKS_ENABLED)
else()
endif(COLLECTION_CONFIG_RUNTIME_CHECKS_ENABLED)

option(COLLECTION_BUILD_TESTS "Build tests" OFF)
if(COLLECTION_BUILD_TESTS)
    enable_testing()
    add_subdirectory(utest)
    add_subdirectory(ext)
endif(COLLECTION_BUILD_TESTS)

add_subdirectory(src)
